<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <Button
        android:id="@+id/Button01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:background="#D6D6D6"
        android:text="@string/confirm_settings"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/control"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/benign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:text="@string/benign"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/malignant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="15dp"
            android:text="@string/malignant"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ControlNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="   "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/BenignNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="15dp"
            android:text="   "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/MalignantNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="15dp"
            android:text="   "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="60sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp" >

        <TextView
            android:id="@+id/tester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:text="Tester:"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/handler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:text="Handler:"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/recorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="15dp"
            android:text="Recorder:"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TesterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="   "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/HandlerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="15dp"
            android:text="   "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/RecorderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="15dp"
            android:text="   "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp" >

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="15dp"
            android:text="Temp:"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/Humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:text="Humidity:"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tempDeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginStart="160dp"
            android:text="   "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/HumidPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginStart="160dp"
            android:text="   "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="50sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp" >

        <Button
            android:id="@+id/EditSettings"
            android:layout_width="wrap_content"
            android:layout_height="94dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0.51"
            android:background="#FF3300"
            android:onClick="onEditDefaultButtonClick"
            android:text="@string/go_back"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/ConfirmSettings"
            android:layout_width="227dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0.16"
            android:background="#66CC00"
            android:onClick="onConfirmButtonClick"
            android:text="@string/confirm"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>